Добавлена функциональность запросов определенных вещей